css/styles.css
/* ... */
.icon.right-default {
  background-image: url("/images/icon-right-default.png");
}
.icon.down-default {
  background-image: url("/images/icon-down-default.png");
}
.icon.dropdown-default {
  background-image: url("/images/icon-dropdown-default.png");
}
.icon.dropdown-collapse {
  background-image: url("/images/icon-dropdown-collapse.png");
}
.icon.right-ejf {
  background-image: url("/images/icon-right-ejf.png");
}
.icon.down-ejf {
  background-image: url("/images/icon-down-ejf.png");
}
.icon.download-ejf {
  background-image: url("/images/icon-download-ejf.png");
}
.icon.right-white {
  background-image: url("/images/icon-right-white.png");
}
.icon.down-white {
  background-image: url("/images/icon-down-white.png");
}
.icon.download-white {
  background-image: url("/images/icon-download-white.png");
}
.icon.heart-white {
  background-image: url("/images/icon-heart-white.png");
}
.icon.facebook {
  background-image: url("/images/icon-facebook.png");
}
.icon.line {
  background-image: url("/images/icon-line.png");
}
.icon.linkedin {
  background-image: url("/images/icon-linkedin.png");
}
.icon.instagram {
  background-image: url("/images/icon-instagram.png");
}

hr {
  display: block;
  height: 1px;
  border-width: 0 0 1px 0;
  width: 100%;
}
hr.divider-default {
  border-color: #BFC4CD;
}
hr.divider-01 {
  border-color: #CFD3DA;
}
hr.divider-02 {
  border-color: #BFC4CD;
}
hr.divider-receipt {
  border-style: dashed;
  border-color: #98A0AE;
}

span.watermark {
  display: inline-block;
  padding: 0.75rem 1rem;
  line-height: 1rem;
  color: #E30613;
  opacity: 0.16;
  border-radius: 4px;
  border: 1px solid #E30613;
  font-size: 1rem;
}

.select-wrapper, .input-wrapper {
  width: 100%;
  margin-bottom: 1.25rem;
}
.select-wrapper .required, .input-wrapper .required {
  color: #E30613;
}
.select-wrapper .required::before, .input-wrapper .required::before {
  content: "*";
  margin-right: 0.25rem;
}
.select-wrapper label, .input-wrapper label {
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  margin-bottom: 0.3rem;
  display: block;
}
.select-wrapper select, .select-wrapper input[type=text], .select-wrapper input[type=number], .input-wrapper select, .input-wrapper input[type=text], .input-wrapper input[type=number] {
  width: 100%;
  border: 1px solid #ACB4BE;
  border-radius: 4px;
  padding: 0.75rem 1rem;
  background-color: transparent;
}

button.big-btn {
  background: linear-gradient(90deg, #54677B 0%, #6B98E0 100%);
  border: 2px solid #54677B;
  -o-border-image: linear-gradient(90deg, #54677B 0%, #6B98E0 100%);
     border-image: linear-gradient(90deg, #54677B 0%, #6B98E0 100%);
  border-image-slice: 1;
  padding: 0.75rem 1.5rem;
  width: 100%;
  margin-bottom: 0.75rem;
  font-size: 1.5rem;
  line-height: 1.5rem;
  font-weight: 700;
  text-align: left;
  color: #FFFFFF;
  cursor: pointer;
  position: relative;
}
button.big-btn:hover {
  background: #FFFFFF;
  color: #54677B;
}
button.big-btn::after {
  background-size: 100%;
  content: "";
  right: 1rem;
  width: 1.5rem;
  height: 1.5rem;
  position: absolute;
}
button.big-btn.btn-calculate::after {
  background-image: url("/images/icon-right-white.png");
}
button.big-btn.btn-calculate:hover::after {
  background-image: url("/images/icon-right-ejf.png");
}
button.big-btn.btn-share::after {
  background-image: url("/images/icon-heart-white.png");
}
button.big-btn.btn-share:hover::after {
  background-image: url("/images/icon-heart-ejf.png");
}
button.big-btn.btn-back::after {
  background-image: url("/images/icon-right-white.png");
}
button.big-btn.btn-back:hover::after {
  background-image: url("/images/icon-right-ejf.png");
}
button.big-btn.btn-download::after {
  background-image: url("/images/icon-download-white.png");
}
button.big-btn.btn-download:hover::after {
  background-image: url("/images/icon-download-ejf.png");
}

.calculator-wrapper {
  width: 100%;
  max-width: 288px;
  padding: 2.75rem 1.25rem 1.25rem;
  border: 1px solid rgba(28, 30, 34, 0.08);
  box-shadow: -8px 16px 40px rgba(28, 30, 34, 0.08);
  background-color: #FFFFFF;
  color: #3B4048;
  position: relative;
}
.calculator-wrapper .calculator-title {
  font-size: 0.875rem;
  line-height: 1em;
  font-weight: 400;
  color: #FFFFFF;
  background-color: #54677B;
  font-family: "Fira Sans Condensed", sans-serif;
  font-weight: 400;
  text-transform: uppercase;
  display: inline-block;
  padding: 0.33rem 0.4rem;
  left: -1px;
  top: -1px;
  position: absolute;
}

button.btn-fund {
  background-color: rgba(28, 30, 34, 0.08);
  background-size: cover;
  -webkit-backdrop-filter: blur(8px);
          backdrop-filter: blur(8px);
  width: 96px;
  height: 52px;
  cursor: pointer;
  border-radius: 8px;
  border: 1px dashed #98A0AE;
}
button.btn-fund p {
  line-height: 1em;
  font-size: 1rem;
  color: #98A0AE;
}
button.btn-fund[data-on=true] {
  border-radius: 0px;
  border-color: transparent;
}
button.btn-fund[data-on=true] p {
  visibility: hidden;
}
button.btn-fund[data-on=true][data-fund=postal] {
  background-image: url("/images/fund_postal_on.png");
}
button.btn-fund[data-on=true][data-fund=insurance] {
  background-image: url("/images/fund_insurance_on.png");
}
button.btn-fund[data-on=true][data-fund=labor] {
  background-image: url("/images/fund_labor_on.png");
}
button.btn-fund[data-on=true][data-fund=retire] {
  background-image: url("/images/fund_retire_on.png");
}

.marquee-wrapper {
  overflow: hidden;
  width: 100vw;
  height: 40px;
  margin-left: calc(-50vw + 50%);
  margin-right: calc(-50vw + 50%);
  position: relative;
  background-color: rgba(84, 103, 123, 0.4);
  -webkit-backdrop-filter: blur(4px);
          backdrop-filter: blur(4px);
  border: 1px solid rgba(255, 255, 255, 0.2);
  border-width: 1px 0;
  opacity: 0.64;
}
.marquee-wrapper .marquee-content {
  width: 2600px;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: space-around;
  position: absolute;
  left: 0;
  animation: marquee 26s linear infinite;
}
/* ... */

